# spur

./: .gitignore  .readthedocs.yml  GTFS_converter.py  LICENSE  README.md  app.py  go_subdivision.py  line4.py  pyproject.toml  readthedocs.yml  setup.py  toy_model.py
ci/: python310_dev.yml
docs/: environment.yml
docs/source/: conf.py  contributing.rst  design.rst  index.rst  quickstart.rst
docs/source/guide/: design.rst  index.rst  installation.rst
docs/source/manual/: index.rst  installation.rst  introduction.rst  quickstart.rst
docs/source/papers/: index.rst  trb2024.rst
docs/source/reference/: components.rst  core.rst  gui.rst  hood.rst  index.rst
examples/: gosub.spur
examples/line4/: line4.py
examples/line4/line4_data/: routes.json  tours.json  trains.json
spur/core/: __init__.py  agent.py  base.py  collection.py  component.py  exceptions.py  jitter.py  model.py  route.py  tour.py  train.py
spur/core/component/: base.py  trackway.py  yard.py
spur/gui/: canvas.py  main.py  main_window_ui.py  palette.py  table.py  tree.py
spur/io/: formats.py
spur/resources/ui/: MainWindow.ui
tests/: conftest.py  test_collection.py  test_component.py  test_integration.py  test_io.py  test_jitter.py  test_model.py  test_route.py  test_tour.py  test_train.py
tests/data/: test_components.json  test_routes.json  test_trains.json
