[tool.poetry]
name = "spur"
version = "0.0.1"
description = "Simulation Platform for Urban Railways"
authors = ["Willem Klumpenhouwer <willem.klumpenhouwer@utoronto.ca>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
PyQt5 = "^5.15.4"
pytest = "^6.2.4"
networkx = "^2.6.1"
simpy = "^4.0.1"
Sphinx = "^4.1.2"
sphinx-rtd-theme = "^0.5.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
black = "^21.7b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
